# livecap-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: benchmark-asr.yml  benchmark-vad.yml  core-tests-windows.yml  core-tests.yml  debug-tenvad.yml  integration-tests.yml  windows-debug-tests.yml
benchmarks/asr/: __init__.py  __main__.py  cli.py  runner.py
benchmarks/common/: __init__.py  datasets.py  engines.py  progress.py  reports.py
benchmarks/optimization/: __main__.py  objective.py  param_spaces.py  vad_optimizer.py
benchmarks/vad/: __init__.py  cli.py  factory.py  preset_integration.py  runner.py
benchmarks/vad/backends/: __init__.py  processor_wrapper.py
config/: __init__.py  core_config_builder.py
docs/: INDEX.md
docs/architecture/: core-api-spec.md
docs/dev-docs/architecture/: core-api-spec.md  core-config-boundaries.md  core-separation-proposal.md  livecap-core-extraction.md  phase0-prerequisites.md  phase1-architecture-plan.md
docs/dev-docs/licensing/: license-checklist.md
docs/dev-docs/licensing-archive/: 01-license-audit.md
docs/dev-docs/oss-strategy/: 00-overview.md  01-license-audit.md  02-dual-license-strategy.md  03-steam-integration.md  04-implementation-roadmap.md  05-templates.md  06-steam-research-findings.md  07-discord-role-management.md  README.md
docs/dev-docs/releases/: pre-release-tag-workflow.md
docs/dev-docs/testing/: README.md
docs/guides/: realtime-transcription.md  vad-optimization.md
docs/guides/benchmark/: asr-benchmark.md  vad-benchmark.md  vad-optimization.md
docs/planning/: issue-166-detect-device-refactor.md  issue-168-supported-engines-fix.md  issue-221-qwen3asr-integration.md  issue-72-translation-plugin-system.md  issue-73-engine-optimization.md  language-based-vad-optimization.md  phase3-package-restructure.md  refactoring-plan.md  vad-benchmark-plan.md  vad-optimization-plan.md
docs/planning/archive/: issue-166-detect-device-refactor.md  issue-168-supported-engines-fix.md  issue-72-architecture.md  issue-72-examples.md  issue-72-testing.md  language-based-vad-optimization.md  phase1-implementation-plan.md  phase2-api-config-simplification.md  phase3-package-restructure.md  vad-benchmark-plan.md  vad-optimization-plan.md  whispers2t-consolidation.md
docs/planning/issue-72/: README.md  architecture.md  examples.md  testing.md
docs/planning/issue-74/: README.md
docs/reference/: api.md  cli.md  feature-inventory.md
docs/reference/vad/: backends.md  config.md
docs/testing/: README.md
engines/: __init__.py  base_engine.py  canary_engine.py  engine_factory.py  library_preloader.py  metadata.py  model_loading_phases.py  model_memory_cache.py  parakeet_engine.py  reazonspeech_engine.py  shared_engine_manager.py  voxtral_engine.py  whispers2t_engine.py
examples/: README.md
examples/batch/: batch_translation.py
examples/realtime/: async_microphone.py  basic_file_transcription.py  callback_api.py  custom_vad_config.py  realtime_translation.py
examples/translation/: basic_translation.py  debug_context.py  evaluate_context.py  file_translation.py  local_translation.py  transcription_with_translation.py
livecap_cli/: __init__.py  __main__.py  cli.py  i18n.py  transcription_types.py
livecap_cli/audio_sources/: __init__.py  base.py  file.py  microphone.py
livecap_cli/engines/: __init__.py  base_engine.py  canary_engine.py  engine_factory.py  library_preloader.py  metadata.py  model_memory_cache.py  nemo_jit_patch.py  nemo_utils.py  parakeet_engine.py  qwen3asr_engine.py  reazonspeech_engine.py  shared_engine_manager.py  voxtral_engine.py  whispers2t_engine.py
livecap_cli/resources/: resource_locator.py
livecap_cli/transcription/: __init__.py  file_pipeline.py  stream.py
livecap_cli/translation/: __init__.py  exceptions.py  factory.py  lang_codes.py  metadata.py  result.py  retry.py
livecap_cli/translation/impl/: google.py  opus_mt.py  riva_instruct.py
livecap_cli/utils/: __init__.py
livecap_cli/vad/: __init__.py  config.py  presets.py  processor.py  state_machine.py
livecap_cli/vad/backends/: __init__.py  silero.py  tenvad.py  webrtc.py
livecap_cli/vad/presets/: __init__.py  silero_en.json  silero_ja.json  tenvad_en.json  tenvad_ja.json  webrtc_en.json  webrtc_ja.json
livecap_core/: __init__.py  __main__.py  cli.py  languages.py  transcription_types.py
livecap_core/audio_sources/: __init__.py
livecap_core/config/: __init__.py  defaults.py  schema.py  validator.py
livecap_core/engines/: canary_engine.py  engine_factory.py  metadata.py  parakeet_engine.py  voxtral_engine.py  whisper_languages.py  whispers2t_engine.py
livecap_core/resources/: __init__.py  ffmpeg_manager.py  model_manager.py
livecap_core/transcription/: __init__.py  file_pipeline.py  result.py  stream.py
livecap_core/translation/: base.py
livecap_core/translation/impl/: __init__.py  opus_mt.py  riva_instruct.py
livecap_core/vad/: __init__.py  presets.py
tests/assets/: README.md
tests/assets/audio/: librispeech_test-clean_1089-134686-0001_en.txt
tests/audio_sources/: __init__.py  conftest.py  test_file_source.py  test_microphone_source.py
tests/benchmark_tests/asr/: test_runner.py
tests/benchmark_tests/common/: __init__.py  test_engines.py  test_progress.py
tests/benchmark_tests/optimization/: test_export_preset.py  test_param_spaces.py
tests/benchmark_tests/vad/: test_cli.py  test_preset_integration.py  test_runner.py
tests/core/: test_config_defaults.py  test_engine_factory.py  test_file_transcription_pipeline.py  test_i18n.py  test_model_manager.py  test_text_normalization.py  test_uv_profiles.py
tests/core/cli/: test_cli.py
tests/core/config/: test_core_config_builder.py
tests/core/engines/: test_engine_factory.py  test_qwen3asr_engine.py
tests/transcription/: test_result.py  test_stream.py  test_transcription_event_normalization.py
tests/utils/: text_normalization.py
tests/vad/: test_backends.py  test_config.py  test_presets.py  test_processor.py  test_state_machine.py
(+28 files in other folders)
